--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hasura JWT Authentication</title>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebaseapp.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebaseauth.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Hasura JWT Authentication</h1>
-        <div id="login">
-            <input type="email" id="email" placeholder="Email">
-            <input type="password" id="password" placeholder="Password">
-            <button onclick="login()">Login</button>
-            <button onclick="register()">Register</button>
+        <div class="container">
+            <h1>Hasura JWT Authentication</h1>
+            <div id="login">
+                <div class="inputs">
+                    <input type="email" id="email" placeholder="Email">
+                    <input type="password" id="password" placeholder="Password">
+                </div>
+                <div class="log-reg">
+                    <button onclick="login()">Login</button>
+                    <button onclick="register()">Register</button>
+                </div>
+            </div>
         </div>
-        <script src="app.js"></script>
     </body>
+    <script src="app.js"></script>
 </html>
